# mlops2025_Lynn_Hadi

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  mlflow.db  pyproject.toml  run_batch_inference_pipeline.py  run_training_pipeline.py
mlruns/1/models/m-38910e02133a47b0bfb4139ff93c5e25/artifacts/: MLmodel  conda.yaml
mlruns/1/models/m-8edb32f22d194d1fbfdbf633e628312a/artifacts/: MLmodel  conda.yaml
models/model_artifact/: trained_model.pkl
scripts/: feature_engineering.py  train.py
src/mlproject/features/: TransformersManager.py  featurizer.py
src/mlproject/pipelines/: batch_inference_pipeline.py  inference_pipeline.py  training_pipeline.py
