[project]
name = "mlproject"
version = "0.1.0"
description = "NYC Taxi Trip Duration - End-to-End MLOps Project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastparquet>=2025.12.0",
    "h3>=4.4.1",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "mlflow>=3.8.1",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "sagemaker==2.235.0",
    "sagemaker-core<2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "xgboost>=3.1.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true
